# ChangeLog for sys-apps/gawk
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/gawk/ChangeLog,v 1.19 2003/04/17 16:57:47 lostlogic Exp $

*gawk-3.1.2-r3 (27 Mar 2003)

  17 Apr 2003; Brandon Low <lostlogic@gentoo.org> gawk-3.1.2-r3.ebuild:
  Changed x86 keywords

  27 Mar 2003; Martin Schlemmer <azarah@gentoo.org> gawk-3.1.2-r3.ebuild :
  Special files like those in /proc, report themselves as regular files
  of length 0, when in fact they have data in them if you try to read them.
  The new record-reading code wasn't quite smart enough to deal with such
  a bizarre case.  The following patch fixes the problem, thanks to 
  Arnold D. Robbins (Maintainer of gawk).

*gawk-3.1.1-r2 (26 Mar 2003)

  26 Mar 2003; Martin Schlemmer <azarah@gentoo.org> gawk-3.1.1-r2.ebuild :
  For some reason gawk-3.1.2 is more pain than worth.  Seems this release
  also borks the ability to specify input files as arguments:

    # gawk '/devfs/ { print }' /proc/filesystems 
    #

  should have been the same as:
  
    # cat /proc/filesystems | gawk '/devfs/ { print }'
    nodev	devfs
    nodev	usbdevfs
    # 

  Thus all this release does, is get the filefuncs module into 3.1.1 as well,
  so that we can totally mask gawk-3.1.2.

*gawk-3.1.2-r2 (25 Mar 2003)

  25 Mar 2003; Martin Schlemmer <azarah@gentoo.org> gawk-3.1.2-r2.ebuild :
  Add filefuncs module from baselayout, as it is very closly tied to the gawk
  version running.  While we are at it, version the module (filefuncs.so.0.0.1,
  with soname of filefuncs.so.0 for now).  Do not install acconfig.h into
  /usr/include/awk, as it is redundant.  This should fix bug #18127.

*gawk-3.1.2-r1 (25 Mar 2003)

  25 Mar 2003; Martin Schlemmer <azarah@gentoo.org> gawk-3.1.2-r1.ebuild :
  Version that should not really have hit portage, but I was busy at work
  and closing time caught me.

*gawk-3.1.2 (24 Mar 2003)
