@@ -1,4 +1,4 @@
-MD5 4e067c30a6089ea569440e86a795547b gawk-3.1.2-r3.ebuild 2845
+MD5 472caf4c834d5f271bfe170cee3bb8c9 gawk-3.1.2-r3.ebuild 2844
 MD5 de51ab659ebf0880cf338b8afd07f66c gawk-3.1.1-r1.ebuild 1886
 MD5 8b3c80662090a2c9448f827bf120ffa8 gawk-3.1.0-r3.ebuild 1535
 MD5 9ad7925856a68140e81b9ae586e68ee1 ChangeLog 4098
