@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/gawk/Attic/gawk-3.1.2-r3.ebuild,v 1.2 2003/04/17 16:57:47 lostlogic Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/gawk/Attic/gawk-3.1.2-r3.ebuild,v 1.3 2003/04/26 16:27:54 joker Exp $
 
 IUSE="nls build"
 
@@ -11,7 +11,7 @@ DESCRIPTION="GNU awk pattern-matching language"
 SRC_URI="ftp://gatekeeper.dec.com/pub/GNU/gawk/${P}.tar.gz"
 HOMEPAGE="http://www.gnu.org/software/gawk/gawk.html"
 
-KEYWORDS="x86 ~ppc ~sparc ~alpha ~mips ~hppa ~arm"
+KEYWORDS="x86 ~ppc sparc ~alpha ~mips ~hppa ~arm"
 SLOT="0"
 LICENSE="GPL-2"
 
