@@ -1,6 +1,6 @@
 MD5 eba5e60712ff9499349f58d0f5ddf111 sed-4.0.6.ebuild 1152
 MD5 6ee85d78a6a6748f35ce9b32d6b05ada sed-4.0.5.ebuild 954
-MD5 1c81f133868e784a6bb83a5fa6313eb2 sed-4.0.7.ebuild 1158
+MD5 18dbc1293abb3845d174f5a506bbca5f sed-4.0.7.ebuild 1155
 MD5 b5e596c30633b77108fddc576e80a0cf ChangeLog 4450
 MD5 2c6bc627ad547d2e936cad3935dfa5ef sed-4.0.5-r1.ebuild 1084
 MD5 1f789b81b2d7992345e1490c68ad5477 files/dos2unix 59
