@@ -1,12 +1,12 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/sed/Attic/sed-4.0.7.ebuild,v 1.3 2003/04/18 18:48:45 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/sed/Attic/sed-4.0.7.ebuild,v 1.4 2003/04/26 16:29:41 joker Exp $
 
 DESCRIPTION="Super-useful stream editor"
 SRC_URI="ftp://ftp.gnu.org/pub/gnu/sed/${P}.tar.gz"
 HOMEPAGE="http://www.gnu.org/software/sed/sed.html"
 
-KEYWORDS="x86 ~ppc ~sparc alpha ~hppa ~arm ~mips"
+KEYWORDS="x86 ~ppc sparc alpha ~hppa ~arm ~mips"
 SLOT="0"
 LICENSE="GPL-2"
 IUSE="nls static build"
